force-app/main/default/objects/DA_StatusTracking__b/DA_StatusTracking__b.object-meta.xml
<CustomObject>
    <label>DA Status Tracking</label>
    <pluralLabel>DA Status Tracking</pluralLabel>
</CustomObject>