force-app/main/default/objects/DA_StatusTracking__b/fields/BusinessHours__c.field-meta.xml
<CustomField>
    <fullName>BusinessHours__c</fullName>
    <label>Business Hours</label>
    <referenceTo>BusinessHours</referenceTo>
    <relationshipName>BusinessHours1564403683489</relationshipName>
    <type>Lookup</type>
</CustomField>