force-app/main/default/objects/DA_StatusTracking__b/fields/BusinessTime__c.field-meta.xml
<CustomField>
    <fullName>BusinessTime__c</fullName>
    <label>Business Time</label>
    <length>1300</length>
    <type>LongTextArea</type>
</CustomField>