force-app/main/default/objects/DA_StatusTracking__b/fields/DurationHours__c.field-meta.xml
<CustomField>
    <fullName>DurationHours__c</fullName>
    <label>Duration Hours</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>