force-app/main/default/objects/DA_StatusTracking__b/fields/Start_Date_Hour__c.field-meta.xml
<CustomField>
    <fullName>Start_Date_Hour__c</fullName>
    <label>Hour of start day</label>
    <length>1300</length>
    <type>LongTextArea</type>
</CustomField>